--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ronijuicebar",
+  "name": "minion-bot",
   "version": "1.0.0",
-  "description": "ronijuicebar",
+  "description": "minion-bot",
   "main": "index.js",
   "scripts": {
     "test": "eslint . && eslint test/. --env mocha && mocha",
